--- a/package.json
+++ b/package.json
@@ -5,23 +5,29 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./css/input.css -o ./css/style.css --watch",
-    "test": "vitest",
-    "test:watch": "vitest --watch"
+    "test": "vitest --exclude='**/*.spec.js'",
+    "test:watch": "vitest --watch --exclude='**/*.spec.js'",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.12",
     "@eslint/css": "^0.13.0",
     "@eslint/js": "^9.37.0",
     "@eslint/json": "^0.13.2",
+    "@playwright/test": "^1.56.1",
+    "dotenv": "^17.2.3",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
+    "http-server": "^14.1.1",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.12",
     "vitest": "^3.2.4"
   }
 }
