--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "vitest --watch --exclude='**/*.spec.js'",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed"
+    "test:e2e:headed": "playwright test --headed",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
     "http-server": "^14.1.1",
+    "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.12",
